--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
+
 <body>
+    <!-- Stuck on part 7 of week 4 -->
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src=./images/dryoarlogo.png alt="Dry Oar Logo">
@@ -57,16 +60,17 @@
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
-        <a href="https://facebook.com">
+        <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
         </a>
-        <a href="https://twitter.com">
+        <a href="https://twitter.com" target="_blank">
             <img src="images/twitter.png" alt="twitter icon">
         </a>
-        <a href="https://instagram.com">
+        <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
     </div>
 </footer>
 </body>
+
 </html>
