--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -63,7 +63,7 @@
           <td class="primary">#104547</td>
           <td class="secondary">#7e6551</td>
           <td class="accent1">#8fa998</td>
-          <td class="accent2">#1e91d6</td>
+          <td class="accent2">#3C779C</td>
         </tr>
       </table>
 
