W07 Personal Site Plan Done

--- a/class_builder/site-plan.html
+++ b/class_builder/site-plan.html
@@ -36,7 +36,7 @@
       <h3>Website Logo</h3>
       <!-- TODO: Week 07 - Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img
-        src="#"
+        src="./images/schedule_logo.png"
         alt="Logo image"
       />
       <hr />
