Did stuff in class and worked on stuff - don't know why my byui_sql stuff is there but oh well I guess

--- a/class_builder/site-plan.html
+++ b/class_builder/site-plan.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -14,9 +13,9 @@
   <body>
     <header>
       <!-- TODO: Week 07 - replace [Site name] with the actual name of your site-->
-      <h1>[Site name] Site Plan</h1>
+      <h1>BYU-I Schedule Builder Site Plan</h1>
       <!-- TODO: Week 07 - replace [FirstName LastName] with your first and last name -->
-      <h2>FirstName LastName</h2>
+      <h2>Kimber Zatylny</h2>
       <h2>WDD 130</h2>
     </header>
     <main>
@@ -24,17 +23,14 @@
       <hr />
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <!-- TODO: Week 07 - Fill in your purpose. In 2–3 sentences, write the purpose statement from your elevator pitch -->
       <p>Class planning isn't always something that people do in advance, but that means that they don't know what classes they want, and it can easily be taken from them. I've decided to make a schedule builder for students in person at BYU-I so they don't have to stress about class planning the night before their registration opens up.</p>
 
       <h3>Audience</h3>
-      <!-- TODO: Week 07 - write about your intended audience. Who are they? How old are they? Why will they be using your site? What do you want them to do? -->
       <p>My audience consists of students attending BYU-I. They'd be using my site to get an idea for class planning for their semester. I'd want them to go in with ideas for their classes, then see how that would look in a schedule customized to their desires.</p>
 
       <hr />
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <!-- TODO: Week 07 - Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img
         src="./images/schedule_logo.png"
         alt="Logo image"
@@ -65,15 +61,12 @@
       <!-- ------------------------Step 9------------------------------ -->
 
       <h3>Typography</h3>
-      <!-- TODO: Week 07 - Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        <!-- TODO: Week 07 - change this -->
-        Heading Font: [Font Name here]
+        Heading Font: Barlow Semi Condensed
       </h4>
       <h4>
-        <!-- TODO: Week 07 - change this -->
-        Paragraph Font: [Font Name here]
+        Paragraph Font: Work Sans
       </h4>
       <h3>Normal paragraph example</h3>
       <p>
@@ -99,28 +92,43 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
       <nav>
         <a href="#">Home</a>
-        <!-- TODO: Week 08 - change the name of page 2 -->
-        <a href="#">Page2</a>
-        <!-- TODO: Week 08 - change the name of page 3 -->
-        <a href="#">Page3</a>
+        <a href="#">Schedule Builder</a>
+        <a href="#">Class Search</a>
+        <a href="#">Teacher Search</a>
       </nav>
       <hr />
-      <h2>Site Map</h2>
+      <div class="sitemap">
+        <div class="sm-home">
+          Home
+        </div>
+        <div class="sm-page2">
+          Schedule Builder
+        </div>
+        <div class="sm-page3">
+          Class Search
+        </div>
+        <div class="sm-page4">
+          Teacher Search
+        </div>
+      </div>
+      <!-- <h2>Site Map</h2>
       <div class="sitemap">
         <div class="sm-home">Home</div>
         <div class="sm-page2">
-          <!-- TODO: Week 08 - change this -->
-          [Page2]
+          Schedule Builder
         </div>
         <div class="sm-page3">
-          <!-- TODO: Week 08 - change this -->
-          [Page3]
+          Class Search
+        </div>
+        <div class="sm-page4">
+          Teacher Search
         </div>
 
         <div class="top">&nbsp;</div>
         <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
-      </div>
+        <div class="middle">&nbsp;</div>
+        <div class="right">&nbsp;</div> -->
+        </div>
 
       <!-- --------Content Section -------------- -->
       <hr />
