--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -18,6 +18,20 @@
       <h2>WDD 130-08</h2>
       <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
     </header>
+    <div id="content">
+      <header>
+          <a id="logo_link" href="index.html">
+              <img class="logo" src=./images/dryoarlogo.png alt="Dry Oar Logo">
+          </a>
+          <nav>
+              <a href="index.html">Home</a>
+              <a href="#">Page 2</a>
+              <a href="site-plan-rafting.html">Site Plan</a>
+              <a href="contactus.html">Contact Us</a>
+          </nav>
+      </header>
+
+
     <main>
       <!-- ------------------------Steps 2-5------------------------------ -->
       <hr />
@@ -133,5 +147,22 @@
       <!-- TODO: Week 8 - uncomment the img tag and change the src to point to an image of the wireframe you made for your subpage-->
       <!-- <img src="#" alt="page 2 wireframe"> -->
     </main>
+    <footer>
+      <p>Dry Oar &copy; 2025 - Kimber Zatylny</p>
+      <p><a href="site-plan-rafting.html">Site Plan</a></p>
+      <p><a href="contactus.html">Contact Us</a></p>
+      <div class="social">
+          <a href="https://facebook.com" target="_blank">
+              <img src="images/facebook.png" alt="fb icon">
+          </a>
+          <a href="https://twitter.com" target="_blank">
+              <img src="images/twitter.png" alt="twitter icon">
+          </a>
+          <a href="https://instagram.com" target="_blank">
+              <img src="images/instagram.png" alt="instagram icon">
+          </a>
+      </div>
+  </footer>
+</div>
   </body>
 </html>
