--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -54,7 +54,7 @@
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img
-        src="..\images\dryoarlogo.png"
+        src=".\images\dryoarlogo.png"
         alt="Logo image"
       />
       <hr />
@@ -113,17 +113,14 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
+        <a href="#">FAQ's</a>
         <a href="#">Contact Us</a>
       </nav>
       <hr />
       <h2>Site Map</h2>
       <div class="sitemap">
         <div class="sm-home">Home</div>
-        <div class="sm-page2">
-          <!-- TODO: Week 8 replace [Page 2] with your chosen subpage title -->
-          [Page2]
-        </div>
+        <div class="sm-page2">FAQ's</div>
         <div class="sm-page3">Contact Us</div>
 
         <div class="top">&nbsp;</div>
@@ -142,10 +139,10 @@
       />
 
       <!-- TODO: Week 8 replace [Page 2] with your chosen subpage title -->
-      <h3>[Page 2]</h3>
+      <h3>FAQ's</h3>
 
       <!-- TODO: Week 8 - uncomment the img tag and change the src to point to an image of the wireframe you made for your subpage-->
-      <!-- <img src="#" alt="page 2 wireframe"> -->
+      <img src="images/faq-site.png" alt="FAQ's page wireframe">
     </main>
     <footer>
       <p>Dry Oar &copy; 2025 - Kimber Zatylny</p>
