--- a/class_builder/subpage1.html
+++ b/class_builder/subpage1.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Class Search</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="subpage1.html">Class Search</a>
+    </nav>
     <button id="storeIndexButton">Store Index</button>
 
     <input type="text" id="courseFilter" placeholder="Enter Title or Course Number">
