--- a/class_builder/subpage2.html
+++ b/class_builder/subpage2.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Class Information</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="subpage1.html">Class Search</a>
+    </nav>
     <p id="storedIndex"></p>
     <p id="jsonData"></p>
 
