--- a/wwr/faqs.html
+++ b/wwr/faqs.html
@@ -20,11 +20,13 @@
             </nav>
         </header>
         <main>
-            <img class="background-image" src="images/question-mark.png" alt="question marks">
-            <h1>Frequently Asked Questions</h1>
+            <div class="faq-header">
+                <img class="question-image" src="../images/question-mark.png" alt="Question Mark">
+                <h1>Frequently Asked Questions</h1>
+            </div>
             <button class="accordion">Is this a good trip for kids? What are the age ranges you allow?</button>
             <div class="panel">
-            <p>Absolutely this is a good trip for children of all ages. 
+            <p class="panel-text">Absolutely, this is a good trip for children of all ages. 
                 We have found however that children over the age of 8 seem to enjoy it more overall (And parents especially enjoy it more if their children are all over 8). 
                 A common concern we get from parents is that their children will be bored stuck on a boat for hours at a time. 
                 Surprisingly we deal with very few bored children of any age. 
@@ -36,19 +38,19 @@
 
             <button class="accordion">Is whitewater rafting safe? I don't even know how to swim! Can I still come?</button>
             <div class="panel">
-            <p>As with all adventure sports, there is an inherent and assumed element of risk. 
+            <p class="panel-text">As with all adventure sports, there is an inherent and assumed element of risk. 
                 To help ensure your safety, our guides are all certified in Wilderness First aid and all start with at least 3 years of rafting experience. 
                 The most common injuries are sunburns and injuries that occur on land.</p>
-            <p>Everyone on commercial rafting trips wears coast guard approved life vest or personal flotation device (PFD). 
+            <p class="panel-text">Everyone on commercial rafting trips wears coast guard approved life vest or personal flotation device (PFD). 
                 Many non swimmers go on rafting trips and have a great time. 
                 Your guide will give you an in depth and engaging safety talk before your trip begins explaining what you should prepare for and do in the event that you fall out of the raft.</p>
             </div>
 
             <button class="accordion">What is included in the trip?</button>
             <div class="panel">
-            <p>We will provide all necessary camping equipment. 
+            <p class="panel-text">We will provide all necessary camping equipment. 
                 This includes a sleeping bag, foam pad, waterproof duffle bag, small waterproof day bag, tent and a cot, eating utensils and camping chair.</p>
-            <p>We provided water and lemonade during the day. 
+            <p class="panel-text">We provided water and lemonade during the day. 
                 Coffee, tea and hot chocolate are provided during the morning and evening hours. 
                 You may bring beer, liquor and soft drinks (in reasonable amounts, 2 cans per day). 
                 You may purchase these items either the night before the trip, or on your way to the put-in. 
@@ -57,25 +59,32 @@
 
             <button class="accordion">What do I need to bring?</button>
             <div class="panel">
-            <p>The most effective way to plan for temperature and weather changes in the Canyon is to be prepared for both hot & dry and cold & wet Rain jacket and rain pants- do not bring ponchos Quick dry shirts and shorts long sleeve cotton shirt and pants- helps keep you cooler on hot days. 
-                Button down shirts provide more sun protection on the neck Light Weight Cotton Pant, Nylon Pant or Sarong the best thing for men to wear are swim trunks as shorts if you are cold natured, bring polypropylene long underwear top and bottom Women wear swim suits or quick dry underwear and sport bras as a base layer during the day. 
-                Over the base layer, wear a pair of quick dry shorts and the shirt of your choice (polypropylene if you are cold, cotton if you are hot). 
-                Two piece swim suits are convenient when changing or going to the bathroom. 
-                hat- large brim hat offers protection from the sun with a good quality strap. 
-                Sunglasses with strap socks- used for hiking and to protect your feet from the sun. 
-                sandals or water shoes- if not used to hiking in these, bring a pair of shoes you have hiked in before camper wear: Bring something comfortable to wear around camp. 
-                Cotton dresses, skirts and sarongs are all popular options. 
-                Sleep wear: You might choose to sleep in your camp wear. 
-                Otherwise, you might like to bring something comfortable to sleep in. 
-                water bottle small day pack for hikes moisturizing lotion headlamp or flashlight moleskin waterproof sunscreen and lip balm 
-                optional items: gloves fleece jacket towel bandana small pillow 
-                hygiene products: toothpaste, toothbrush, tissue, nail clippers, feminine hygiene products, extra eyeglasses or contacts, biodegradable soap and shampoo camera equipment book, watercolors, journal and pen</p>
+                <ul class="panel-text">
+                  <li>Rain jacket and rain pants – do not bring ponchos</li>
+                  <li>Quick dry shirts and shorts; long sleeve cotton shirt and pants help keep you cooler on hot days</li>
+                  <li>Button down shirts provide more sun protection on the neck</li>
+                  <li>Light Weight Cotton Pant, Nylon Pant, or Sarong – for men; if you’re cold natured, bring polypropylene long underwear (top and bottom)</li>
+                  <li>Women: wear swim suits or quick dry underwear and sport bras as a base layer during the day</li>
+                  <li>Over the base layer, wear a pair of quick dry shorts and the shirt of your choice (polypropylene if you’re cold, cotton if you’re hot)</li>
+                  <li>Two-piece swim suits are convenient when changing or going to the bathroom</li>
+                  <li>Hat – large brim hat offers protection from the sun with a good quality strap</li>
+                  <li>Sunglasses with strap</li>
+                  <li>Socks – used for hiking and to protect your feet from the sun</li>
+                  <li>Sandals or water shoes – if you’re not used to hiking in these, bring a pair of shoes you have hiked in before</li>
+                  <li>Camper wear: bring something comfortable to wear around camp. Cotton dresses, skirts, and sarongs are all popular options</li>
+                  <li>Sleep wear: you might choose to sleep in your camp wear, or bring something comfortable to sleep in</li>
+                  <li>Water bottle, small day pack for hikes, moisturizing lotion, headlamp or flashlight, moleskin, waterproof sunscreen, and lip balm</li>
+                  <li>Hygiene products: toothpaste, toothbrush, tissue, nail clippers, feminine hygiene products, extra eyeglasses or contacts, biodegradable soap, and shampoo</li>
+                  <li>Camera equipment, book, watercolors, journal, and pen</li>
+                  <li>Optional items: gloves, fleece jacket, towel, bandana, small pillow</li>
+                </ul>
             </div>
+              
 
             <button class="accordion">What is so great about whitewater rafting anyway?</button>
             <div class="panel">
-            <p>Are you kidding me! What's not great about whitewater rafting!...Let's describe a common day on the river.</p>
-            <p>Arise in the soft light of the early morning after a night spent sleeping under a beautiful starry sky. 
+            <p class="panel-text">Are you kidding me! What's not great about whitewater rafting!...Let's describe a common day on the river.</p>
+            <p class="panel-text">Arise in the soft light of the early morning after a night spent sleeping under a beautiful starry sky. 
                 Have a hearty warm breakfast of fresh blueberry pancakes or omelets to order, then pack your things and prepare for the day. 
                 The day is filled with some combination of swift water, rapids, calms, hikes, history, geology, stories, and more good food. 
                 We try to hit camp around 4 or 5, after setting up your cot you can relax with a good book or good company by the river, or explore around camp while your guides prepare your dinner...something perhaps like steak and potatoes, or grilled salmon...and dutch oven brownies...you won't forget the dutch oven brownies. 
@@ -84,9 +93,8 @@
 
             <button class="accordion">How far in advance should I book my trip?</button>
             <div class="panel">
-            <p>If you have specific dates you need, we recommend booking a year in advance. 
+            <p class="panel-text">If you have specific dates you need, we recommend booking a year in advance. 
                 If you can be more flexible 6 months in advance is usually sufficient.</p>
-            </div>
             <script>
             var acc = document.getElementsByClassName("accordion");
             var i;
@@ -108,7 +116,26 @@
             }
             </script>
             </div>
-            
+            <div>
+                <p>Have more questions? <a href="contactus.html">Contact us</a> for more information.</p>
+            </div>
+            <footer>
+                <p>Dry Oar &copy; 2025 - Kimber Zatylny</p>
+                <p><a href="site-plan-rafting.html">Site Plan</a></p>
+                <p><a href="contactus.html">Contact Us</a></p>
+                <div class="social">
+                    <a href="https://facebook.com" target="_blank">
+                        <img src="images/facebook.png" alt="fb icon">
+                    </a>
+                    <a href="https://twitter.com" target="_blank">
+                        <img src="images/twitter.png" alt="twitter icon">
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
+                        <img src="images/instagram.png" alt="instagram icon">
+                    </a>
+                </div>
+            </footer>
         </main>
+    </div>
 </body>
 </html>
