Personal site plan updated

--- a/class_builder/site-plan.html
+++ b/class_builder/site-plan.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <!-- TODO: Week 07 - replace [Site name] with the actual name of your site-->
-      <h1>BYU-I Schedule Builder Site Plan</h1>
+      <h1>BYU-I Class Search Site Plan</h1>
       <!-- TODO: Week 07 - replace [FirstName LastName] with your first and last name -->
       <h2>Kimber Zatylny</h2>
       <h2>WDD 130</h2>
@@ -23,15 +23,20 @@
       <hr />
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>Class planning isn't always something that people do in advance, but that means that they don't know what classes they want, and it can easily be taken from them. I've decided to make a schedule builder for students in person at BYU-I so they don't have to stress about class planning the night before their registration opens up.</p>
+      <p>Class planning isn't always something that people do in advance, but that means that they don't know what classes they want, and it can easily be taken from them. 
+        I've decided to make a class searcher for students in person at BYU-I so they don't have to stress as much about class planning the night before their registration opens up.</p>
 
       <h3>Audience</h3>
-      <p>My audience consists of students attending BYU-I. They'd be using my site to get an idea for class planning for their semester. I'd want them to go in with ideas for their classes, then see how that would look in a schedule customized to their desires.</p>
+      <p>My audience consists of students attending BYU-I. 
+        They'd be using my site to get an idea for class planning for their semester. 
+        I'd want them to go in with ideas for their classes and see what classes they could take for that semester, and then see what teachers offer certain times so that they can more easily build their own schedule.</p>
+      <p>*An actual schedule builder is an idea I have, but don't currently have the skills to implement*</p>
 
       <hr />
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <img
+        class="schedule-logo"
         src="./images/schedule_logo.png"
         alt="Logo image"
       />
@@ -51,10 +56,10 @@
         </tr>
         <!-- Switch to the site-plan.css file and change your colors there. -->
         <tr>
-          <td class="primary"></td>
-          <td class="secondary"></td>
-          <td class="accent1"></td>
-          <td class="accent2"></td>
+          <td class="primary">#006eb8</td>
+          <td class="secondary">#c2c2cf</td>
+          <td class="accent1">#222226</td>
+          <td class="accent2">#004979</td>
         </tr>
       </table>
 
@@ -127,8 +132,8 @@
         <div class="top">&nbsp;</div>
         <div class="left">&nbsp;</div>
         <div class="middle">&nbsp;</div>
-        <div class="right">&nbsp;</div> -->
-        </div>
+        <div class="right">&nbsp;</div>
+        </div> -->
 
       <!-- --------Content Section -------------- -->
       <hr />
