--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="wwr/positoning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
+        <a href="class_builder/site-plan.html">Personal Siteplan</a>
     </nav>
     <h1>Kimber Zatylny</h1>
     <img src="kimber-zat.jpg" alt="Kimber Zatylny"
