--- a/class_builder/site-plan.html
+++ b/class_builder/site-plan.html
@@ -19,7 +19,6 @@
       <h2>WDD 130</h2>
     </header>
     <main>
-      <!-- ------------------------Steps 2-3------------------------------ -->
       <hr />
       <h2>Overview</h2>
       <h3>Purpose</h3>
@@ -43,8 +42,6 @@
       <hr />
       <h2>Style Guide</h2>
 
-      <!-- ------------------------Steps 4-8------------------------------ -->
-
       <h3>Color Palette</h3>
 
       <table class="colors">
@@ -54,7 +51,6 @@
           <th>Accent 1</th>
           <th>Accent 2</th>
         </tr>
-        <!-- Switch to the site-plan.css file and change your colors there. -->
         <tr>
           <td class="primary">#006eb8</td>
           <td class="secondary">#c2c2cf</td>
@@ -62,8 +58,6 @@
           <td class="accent2">#004979</td>
         </tr>
       </table>
-
-      <!-- ------------------------Step 9------------------------------ -->
 
       <h3>Typography</h3>
 
@@ -90,8 +84,6 @@
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
         commodo consequat.
       </p>
-
-      <!-- ------------------------Step 10------------------------------ -->
 
       <h3>Navigation</h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
@@ -154,9 +146,9 @@
       />
 
       <!-- TODO: Week 08 - change this -->
-      <h3>[Page 2]</h3>
-      <p>[Written copy for the Page 2 here]</p>
-      <p>Images for the Page 2</p>
+      <h3>Class Search</h3>
+      <p>[Written copy for the Class Search page here]</p>
+      <p>Images for the Class Search page</p>
       <img
         src="#"
         alt="image for page"
@@ -174,12 +166,8 @@
       </p>
       <p>Images for the Page 3</p>
       <img
-        src="#"
-        alt="image for page3"
-      />
-      <img
-        src="#"
-        alt="image for page3"
+        src="./images/byui-map.png"
+        alt="byui-map"
       />
 
       <hr />
@@ -197,21 +185,21 @@
       </p>
       <!-- TODO: Week 09 - Add main page wireframe here  -->
       <img
-        src="#"
+        src="images/home-wireframe.png"
         alt="home page wireframe"
       />
 
       <!-- TODO: Week 09 - change this -->
-      <h3>[Page 2]</h3>
+      <h3>Course Search</h3>
       <p>
         <!-- TODO: Week 09 - change this -->
-        [Any additional details about page 2 that the wireframe does not make
+        [Any additional details about Course Search that the wireframe does not make
         clear]
       </p>
-      <!-- TODO: Week 09 - Add page 2 wireframe here  -->
+      <!-- TODO: Week 09 - Add Course Search wireframe here  -->
       <img
         src="#"
-        alt="page 2 wireframe"
+        alt="Course Search wireframe"
       />
 
       <!-- TODO: Week 09 - change this -->
