--- a/class_builder/subpage1.html
+++ b/class_builder/subpage1.html
@@ -88,5 +88,8 @@
             displayCourses('');
         });
     </script>
+<footer>
+    <p>Created: 2025 Kimber Zatylny</p>
+</footer>
 </body>
 </html>
